tests/checker/diagnostics/0559_functor_generative_constructor_mismatch_02.ml.infer.expected
File "0559_functor_generative_constructor_mismatch_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0559_functor_generative_constructor_mismatch_02 is not a valid module name.

File "0559_functor_generative_constructor_mismatch_02.ml", line 8, characters 19-27:
8 | let _ : B_beta.t = A_beta.T
                       ^^^^^^^^
Error: The constructor A_beta.T belongs to the variant type A_beta.t
       but a constructor was expected belonging to the variant type B_beta.t
